# libretto

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/: settings.local.json
.github/workflows/: benchmark.yml  ci.yml
crates/libretto-archive/: Cargo.toml
crates/libretto-archive/src/: lib.rs
crates/libretto-audit/: Cargo.toml
crates/libretto-audit/benches/: integrity_bench.rs
crates/libretto-audit/examples/: audit_laravel.rs
crates/libretto-audit/src/: advisory.rs  lib.rs  permissions.rs
crates/libretto-autoloader/: Cargo.toml
crates/libretto-autoloader/benches/: autoloader_bench.rs
crates/libretto-autoloader/src/: fast_parser.rs  lib.rs  parser.rs  scanner.rs
crates/libretto-autoloader/src/templates/: ClassLoader.php
crates/libretto-bench/benches/: autoloader_generation.rs  cache_operations.rs  lockfile_operations.rs  memory_benchmarks.rs  realworld_scenarios.rs  simd_benchmarks.rs  vcs_operations.rs
crates/libretto-bench/src/: composer_runner.rs  fixtures.rs  lib.rs
crates/libretto-cache/: Cargo.toml
crates/libretto-cache/benches/: cache_bench.rs
crates/libretto-cache/src/: bloom.rs  compression.rs  config.rs  index.rs  l1.rs  l2.rs  lib.rs  simd.rs  stats.rs  tiered.rs
crates/libretto-cli/: Cargo.toml
crates/libretto-cli/src/: auth_manager.rs  fetcher.rs  installer_paths.rs  main.rs  platform.rs  scripts.rs
crates/libretto-cli/src/commands/: archive.rs  cache_clear.rs  check_platform_reqs.rs  config.rs  create_project.rs  diagnose.rs  dump_autoload.rs  exec.rs  global.rs  install.rs  lock_generator.rs  mod.rs  prohibits.rs  reinstall.rs  remove.rs  run_script.rs  search.rs  self_update.rs  show.rs  update.rs  validate.rs
crates/libretto-cli/src/output/: json.rs  mod.rs  progress.rs  prompt.rs  table.rs
crates/libretto-cli/tests/: cli_tests.rs  snapshot_tests.rs
crates/libretto-cli/tests/snapshots/: snapshot_tests__about.snap  snapshot_tests__audit_help.snap  snapshot_tests__cache_clear_help.snap  snapshot_tests__completion_bash.snap  snapshot_tests__completion_fish.snap  snapshot_tests__completion_zsh.snap  snapshot_tests__config_help.snap  snapshot_tests__diagnose_help.snap  snapshot_tests__dump_autoload_help.snap  snapshot_tests__error_invalid_command.snap  snapshot_tests__error_invalid_json.snap  snapshot_tests__error_no_composer_json.snap  snapshot_tests__init_help.snap  snapshot_tests__install_help.snap  snapshot_tests__licenses_help.snap  snapshot_tests__main_help.snap  snapshot_tests__outdated_help.snap  snapshot_tests__remove_help.snap  snapshot_tests__require_help.snap  snapshot_tests__search_help.snap  snapshot_tests__show_empty.snap  snapshot_tests__show_help.snap  snapshot_tests__update_help.snap  snapshot_tests__validate_help.snap  snapshot_tests__validate_valid.snap
crates/libretto-config/src/: auth.rs  env.rs  error.rs  loader.rs  types.rs  validate.rs
crates/libretto-core/: Cargo.toml
crates/libretto-core/src/: error.rs  json.rs  lib.rs  platform.rs  version.rs
crates/libretto-downloader/: Cargo.toml
crates/libretto-downloader/benches/: download_bench.rs
crates/libretto-downloader/src/: checksum.rs  client.rs  config.rs  error.rs  extract.rs  lib.rs  parallel.rs  progress.rs  retry.rs  source.rs  stream.rs  throttle.rs  vcs.rs
crates/libretto-lockfile/: Cargo.toml
crates/libretto-lockfile/benches/: lockfile.rs
crates/libretto-lockfile/src/: atomic.rs  diff.rs  error.rs  generator.rs  hash.rs  lib.rs  migration.rs  types.rs  validation.rs
crates/libretto-platform/: Cargo.toml
crates/libretto-platform/src/: simd.rs
crates/libretto-plugin-system/benches/: plugin_bench.rs
crates/libretto-plugin-system/src/: hooks.rs  lifecycle.rs  php.rs  sandbox.rs
crates/libretto-repository/src/: cache.rs  client.rs  manager.rs
crates/libretto-repository/src/packagist/: client.rs
crates/libretto-repository/src/providers/: bitbucket.rs  github.rs  gitlab.rs
crates/libretto-resolver/benches/: resolver_bench.rs
crates/libretto-resolver/src/: composer.rs  index.rs  package.rs  provider.rs  resolver.rs  types.rs  version.rs
crates/libretto-test-utils/: Cargo.toml
crates/libretto-test-utils/src/: assertions.rs  fixtures.rs  generators.rs  git_utils.rs  lib.rs  mock_server.rs  proptest_strategies.rs  temp_project.rs
crates/libretto-vcs/src/: credentials.rs  error.rs  git.rs  hg.rs  lib.rs  manager.rs  parallel.rs  perforce.rs  svn.rs  types.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_composer_json.rs  fuzz_composer_lock.rs  fuzz_json_parsing.rs  fuzz_package_name.rs  fuzz_version_constraint.rs
scripts/: flamegraph.sh  memory_profile.sh
tests/: integration_tests.rs  platform_tests.rs  security_tests.rs  stress_tests.rs
