[workspace]
resolver = "2"
members = [
    "crates/libretto-core",
    "crates/libretto-platform",
    "crates/libretto-cache",
    "crates/libretto-config",
    "crates/libretto-repository",
    "crates/libretto-resolver",
    "crates/libretto-downloader",
    "crates/libretto-archive",
    "crates/libretto-vcs",
    "crates/libretto-autoloader",
    "crates/libretto-plugin-system",
    "crates/libretto-audit",
    "crates/libretto-lockfile",
    "crates/libretto-cli",
    "crates/libretto-bench",
    "crates/libretto-test-utils",
]

[workspace.package]
version = "0.1.2"
edition = "2024"
rust-version = "1.89"
license = "MIT"
repository = "https://github.com/libretto-pm/libretto"
authors = ["Libretto Contributors"]
keywords = ["composer", "package-manager", "php", "dependency"]
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
# Internal crates
libretto-core = { path = "crates/libretto-core" }
libretto-platform = { path = "crates/libretto-platform" }
libretto-cache = { path = "crates/libretto-cache" }
libretto-config = { path = "crates/libretto-config" }
libretto-repository = { path = "crates/libretto-repository" }
libretto-resolver = { path = "crates/libretto-resolver" }
libretto-downloader = { path = "crates/libretto-downloader" }
libretto-archive = { path = "crates/libretto-archive" }
libretto-vcs = { path = "crates/libretto-vcs" }
libretto-autoloader = { path = "crates/libretto-autoloader" }
libretto-plugin-system = { path = "crates/libretto-plugin-system" }
libretto-audit = { path = "crates/libretto-audit" }
libretto-lockfile = { path = "crates/libretto-lockfile" }

# Async runtime
tokio = { version = "1.35", features = ["full", "parking_lot"] }

# CLI
clap = { version = "4.4", features = [
    "derive",
    "env",
    "unicode",
    "wrap_help",
    "string",
] }

# Parallelism
rayon = "1.8"

# Concurrent data structures
dashmap = "5.5"
parking_lot = "0.12"
moka = { version = "0.12", features = ["sync", "future"] }

# Zero-copy serialization
rkyv = { version = "0.8", default-features = true }

# Fast hashing
ahash = "0.8"
blake3 = { version = "1.5", features = ["rayon"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# JSON (high-performance)
sonic-rs = "0.3"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "gzip",
    "brotli",
    "deflate",
    "zstd",
    "json",
    "stream",
    "http2",
    "socks",
] }

# HTTP types
http = "1.1"
hyper = { version = "1.4", features = ["http1", "http2", "client"] }
hyper-util = { version = "0.1", features = ["tokio", "http2"] }

# Async streams and compression
tokio-util = { version = "0.7", features = ["io", "codec"] }
futures-util = "0.3"
async-stream = "0.3"
async-compression = { version = "0.4", features = [
    "tokio",
    "gzip",
    "deflate",
    "brotli",
    "zstd",
    "xz",
    "bzip2",
] }
async_zip = { version = "0.0.17", features = [
    "tokio",
    "deflate",
    "bzip2",
    "zstd",
    "lzma",
] }
tokio-tar = "0.3"

# Additional hashing
sha2 = "0.10"
sha1 = "0.10"
digest = "0.10"

# Memory mapping
memmap2 = "0.9"

# Rate limiting / throttling
governor = "0.6"
nonzero_ext = "0.3"

# Backoff / retry
backon = "1.2"

# Pin utilities
pin-project-lite = "0.2"

# Graph algorithms
petgraph = "0.6"

# Version parsing
semver = { version = "1.0", features = ["serde"] }

# Dynamic loading
libloading = "0.8"

# Memory allocator
mimalloc = { version = "0.1", default-features = false }

# Archive handling
zip = { version = "2.0", default-features = false, features = [
    "deflate",
    "bzip2",
    "zstd",
] }
tar = "0.4"
flate2 = "1.0"
xz2 = "0.1"
bzip2 = "0.4"
zstd = "0.13"

# CPU detection
num_cpus = "1.16"

# Git operations
gix = { version = "0.78", default-features = false, features = [
    "blocking-network-client",
    "blocking-http-transport-reqwest-rust-tls",
] }

# Filesystem
walkdir = "2.4"
tempfile = "3.9"
directories = "5.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# URL
url = { version = "2.5", features = ["serde"] }

# Time
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "serde",
    "std",
] }

# Terminal UI
indicatif = { version = "0.17", features = ["rayon"] }
console = "0.15"
comfy-table = "7.1"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
owo-colors = { version = "4.0", features = ["supports-colors"] }

# Error reporting
miette = { version = "7.2", features = ["fancy"] }

# Futures
futures = "0.3"

# Bytes
bytes = "1.5"

# Cryptography and security (additional)
hex = "0.4"
base64 = "0.22"
subtle = "2.5"
ed25519-dalek = { version = "2.1", features = ["std", "rand_core"] }
sequoia-openpgp = { version = "2.1", default-features = false, features = [
    "crypto-rust",
    "allow-experimental-crypto",
    "allow-variable-time-crypto",
] }
keyring = "2.3"
zeroize = "1.7"
rustix = { version = "0.38", features = ["fs"] }
libc = "0.2"
windows = { version = "0.52", features = [
    "Win32_Storage_FileSystem",
    "Win32_Security",
] }

# Once cell
once_cell = "1.19"

# Regex
regex = "1.10"

# Fast byte searching
memchr = "2.7"

# PHP parsing
tree-sitter = "0.24"
tree-sitter-php = "0.23"

# Testing - Core frameworks
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
test-case = "3.3"
rstest = "0.18"
rand = "0.8"

# Testing - Snapshot testing
insta = { version = "1.34", features = ["json", "yaml", "redactions"] }

# Testing - Mocking
mockall = "0.12"
wiremock = "0.6"
mockito = "1.2"

# Testing - Assertions
pretty_assertions = "1.4"
assert_matches = "1.5"
assert_cmd = "2.0"
predicates = "3.0"

# Testing - Async
tokio-test = "0.4"
async-trait = "0.1"

# Testing - Fake data generation
fake = { version = "2.9", features = ["derive", "chrono", "uuid"] }
quickcheck = "1.0"
quickcheck_macros = "1.0"
arbitrary = { version = "1.3", features = ["derive"] }

# Testing - File system
assert_fs = "1.1"

# Testing - HTTP testing
httpmock = "0.7"

# Testing - Fuzzing (dev dependencies)
afl = "0.15"

[workspace.lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
# Lint groups at lower priority so individual lints can override
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Individual lint overrides - allow unwrap in this codebase
unwrap_used = "allow"

# Allow integer truncation casts in low-level code
cast_possible_truncation = "allow"

# Allow multiple crate versions - caused by transitive dependencies
# that we cannot control (hashbrown, thiserror versions from upstream)
multiple_crate_versions = "allow"

# Module naming - we intentionally use descriptive module names
module_name_repetitions = "allow"

# SIMD code requires these casts for performance-critical code
cast_ptr_alignment = "allow"

# Integer casts are often intentional in low-level code
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"

# These are often false positives or overly pedantic
significant_drop_tightening = "allow"
option_if_let_else = "allow"
similar_names = "allow"

# Documentation lints - allow for internal code
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# String formatting patterns
format_push_string = "allow"

# Match arms with identical bodies are sometimes clearer
match_same_arms = "allow"

# Manual let-else can be more readable
manual_let_else = "allow"

# Field assignment patterns
field_reassign_with_default = "allow"

# Clone efficiency - sometimes clone is clearer
assigning_clones = "allow"

# Debug implementations
missing_fields_in_debug = "allow"

# Function argument efficiency
trivially_copy_pass_by_ref = "allow"
needless_pass_by_value = "allow"

# Unused self in trait methods for API consistency
unused_self = "allow"

# Continue can be explicit for clarity
needless_continue = "allow"

# Wildcard imports in internal modules are fine
wildcard_imports = "allow"

# Const fn detection - allow non-const for flexibility
missing_const_for_fn = "allow"

# Map/unwrap patterns are often clearer than alternatives
map_unwrap_or = "allow"

# Significant drop in scrutinee - allow for readability
significant_drop_in_scrutinee = "allow"

# Items after statements - sometimes needed for local types
items_after_statements = "allow"

# Semicolon formatting - allow for benchmark closures
semicolon_if_nothing_returned = "allow"

# Field assignment patterns
default_trait_access = "allow"

# Send/Sync - async code patterns
future_not_send = "allow"

# Struct bools - sometimes needed for config
struct_excessive_bools = "allow"

# If statement collapsing - sometimes clearer separate
collapsible_if = "allow"

# Return value patterns
unnecessary_wraps = "allow"
must_use_candidate = "allow"

# Closure patterns
redundant_closure = "allow"
redundant_closure_for_method_calls = "allow"

# Method naming
should_implement_trait = "allow"

# Complex types - allow for now
type_complexity = "allow"

# Async patterns
unused_async = "allow"

# Identity operations - sometimes for clarity in tests
identity_op = "allow"

# Format string patterns
literal_string_with_formatting_args = "allow"

# Clone patterns
redundant_clone = "allow"

# Option reference patterns
ref_option = "allow"
option_as_ref_deref = "allow"

# Integer truncation - handled appropriately
cast_lossless = "allow"

# Wildcard matches
match_wildcard_for_single_variants = "allow"

# Vec patterns
useless_vec = "allow"

# Function length - allow longer functions
too_many_lines = "allow"

# Large stack arrays - sometimes needed for performance
large_stack_arrays = "allow"

# Bit mask patterns - existing code is clear
verbose_bit_mask = "allow"

# Hex literals - existing format is clear
unreadable_literal = "allow"

# Mutex guards across await - sometimes needed
await_holding_lock = "allow"

# Inherent to_string - allow for custom implementations
inherent_to_string = "allow"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"
debug = false

[profile.dev]
opt-level = 1

[profile.bench]
inherits = "release"
debug = true
strip = false
# Override release settings to reduce memory usage during benchmark compilation
# Fat LTO with codegen-units=1 can consume 20GB+ RAM when compiling many benchmarks
lto = "thin"
codegen-units = 4
