[package]
name = "libretto-fuzz"
version = "0.0.0"
authors = ["Libretto Contributors"]
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.3", features = ["derive"] }

# Crates to fuzz
libretto-core = { path = "../crates/libretto-core" }
libretto-lockfile = { path = "../crates/libretto-lockfile" }

# Utilities
serde_json = "1.0"
semver = "1.0"

[[bin]]
name = "fuzz_version_constraint"
path = "fuzz_targets/fuzz_version_constraint.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_json_parsing"
path = "fuzz_targets/fuzz_json_parsing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_composer_json"
path = "fuzz_targets/fuzz_composer_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_composer_lock"
path = "fuzz_targets/fuzz_composer_lock.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_package_name"
path = "fuzz_targets/fuzz_package_name.rs"
test = false
doc = false
bench = false
