[package]
name = "libretto-archive"
description = "Archive extraction for Libretto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[lints]
workspace = true

[dependencies]
libretto-core = { workspace = true }
zip = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }
xz2 = "0.1"
bzip2 = "0.4"
