[package]
name = "libretto-autoloader"
description = "Ultra-fast PHP autoloader generation for Libretto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[lints]
workspace = true

[dependencies]
# Internal crates
libretto-core = { workspace = true }

# Serialization
serde = { workspace = true }
sonic-rs = { workspace = true }

# Zero-copy serialization for caching
rkyv = { workspace = true }

# Logging
tracing = { workspace = true }

# Filesystem
walkdir = { workspace = true }
memmap2 = { workspace = true }

# Parallelism
rayon = { workspace = true }

# PHP parsing (mago-syntax is faster than tree-sitter-php)
# Pin to 1.3.0 - API will change in 1.4.0: (program, Option<error>) -> program with program.errors
mago-syntax = "=1.3.0"
mago-span = "=1.3.0"
mago-database = "=1.3.0"
bumpalo = "3"

# Fast hashing
blake3 = { workspace = true }
ahash = { workspace = true }

# Fast byte searching
memchr = { workspace = true }

# Regex for fallback parsing
regex = { workspace = true }

# Concurrent data structures
dashmap = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "autoloader_bench"
harness = false
