[package]
name = "libretto-cli"
description = "Command-line interface for Libretto package manager"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[[bin]]
name = "libretto"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
# Internal crates
libretto-core = { workspace = true }
libretto-config = { workspace = true }
libretto-platform = { workspace = true }
libretto-cache = { workspace = true }
libretto-repository = { workspace = true }
libretto-resolver = { workspace = true }
libretto-downloader = { workspace = true }
libretto-archive = { workspace = true }
libretto-vcs = { workspace = true }
libretto-autoloader = { workspace = true }
libretto-plugin-system = { workspace = true }
libretto-audit = { workspace = true }
libretto-lockfile = { workspace = true }

# CLI framework
clap = { workspace = true, features = [
    "derive",
    "env",
    "unicode",
    "wrap_help",
    "string",
    "color",
] }
clap_complete = "4.5"

# Async runtime
tokio = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Terminal UI
console = { workspace = true }
indicatif = { workspace = true }
comfy-table = { workspace = true }
dialoguer = { workspace = true }
owo-colors = { workspace = true }

# Error handling
anyhow = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
sonic-rs = { workspace = true }

# Version handling
semver = { workspace = true }

# Utilities
chrono = { workspace = true }
url = { workspace = true }
directories = { workspace = true }
walkdir = { workspace = true }
tempfile = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Archive handling
zip = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }

# Parallelism
rayon = { workspace = true }
futures = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }

# Hashing
sha1 = { workspace = true }
hex = { workspace = true }

# System utilities
gethostname = "0.5"
dirs = "5.0"

[dev-dependencies]
# Testing frameworks
assert_cmd = { workspace = true }
predicates = { workspace = true }
insta = { workspace = true }
tempfile = { workspace = true }
proptest = { workspace = true }
rstest = { workspace = true }
tokio-test = { workspace = true }
pretty_assertions = { workspace = true }
wiremock = { workspace = true }
