[package]
name = "libretto-core"
description = "Core types and utilities for Libretto package manager"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[lints]
workspace = true

[dependencies]
mimalloc = { workspace = true }
serde = { workspace = true }
sonic-rs = { workspace = true }
thiserror = { workspace = true }
ahash = { workspace = true }
blake3 = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
semver = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
test-case = { workspace = true }
rstest = { workspace = true }
pretty_assertions = { workspace = true }
insta = { workspace = true }
rand = { workspace = true }

[[bench]]
name = "json_bench"
harness = false
