[package]
name = "libretto-platform"
description = "Comprehensive cross-platform compatibility layer with platform-specific optimizations for Libretto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[lints]
workspace = true

[features]
default = ["async-io", "simd", "shell", "tls"]
# Async I/O with platform-specific optimizations
async-io = ["tokio", "tokio-util"]
# SIMD support with runtime detection
simd = []
# Shell integration
shell = []
# TLS/SSL support
tls = ["rustls", "rustls-pemfile", "webpki-roots"]
# Native TLS fallback
native-tls-backend = ["native-tls", "tokio-native-tls"]
# io_uring support (Linux 5.1+ only)
io-uring = ["tokio-uring"]

[dependencies]
libretto-core = { workspace = true }
directories = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
memchr = { workspace = true }
bytes = { workspace = true }
tempfile = { workspace = true }
fs2 = "0.4"
cfg-if = "1.0"

# Async runtime
tokio = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }

# io_uring - moved to target-specific dependency below

# TLS
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"], optional = true }
rustls-pemfile = { version = "2.1", optional = true }
webpki-roots = { version = "0.26", optional = true }

# Native TLS fallback
native-tls = { version = "0.2", optional = true }
tokio-native-tls = { version = "0.3", optional = true }

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.29", features = ["fs", "signal", "process", "user"] }

[target.'cfg(target_os = "linux")'.dependencies]
tokio-uring = { version = "0.5", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Environment",
    "Win32_System_ProcessStatus",
] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
criterion = { workspace = true }

[[bench]]
name = "platform_bench"
harness = false
